--- a/style.css
+++ b/style.css
@@ -136,6 +136,34 @@ form {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
+  justify-content: space-between;
+}
+
+.pink-gradient {
+  background: radial-gradient(#fff, #ffd6d6);
+  margin-top: 50px;
+}
+
+.col-2 {
+  flex-basis: 46%;
+}
+
+.centralise {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.col-2 > img {
+  width: 70%;
+}
+
+.col-2 > h3 {
+  font-size: 50px;
+}
+
+.col2p {
+  color: #555;
 }
 
 .col-4 {
@@ -156,4 +184,67 @@ form {
   text-align: center;
   font-size: 50px;
   margin-top: 80px;
+}
+
+.marquee {
+  animation: marqueDirection 10s linear infinite;
+}
+
+@keyframes marqueDirection {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+.box1 {
+  width: 100px;
+  height: 100px;
+  background-color: #ff523b;
+  border: 2px dotted black;
+}
+
+/* {} curly braces */
+/* () parentheses */
+/* [] square brackets */
+
+.boxers {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.image-abs {
+  width: 100%;
+}
+
+.brands > img {
+  filter: grayscale(100%);
+  cursor: pointer;
+  transition: filter 0.5s ease-in-out;
+}
+
+.brands > img:hover {
+  filter: grayscale(0%);
+}
+
+.fa-quote-left {
+  color: #ff523b;
+}
+
+.testi {
+  box-shadow: 2px 2px 10px 2px #ff523b;
+  padding: 20px;
+}
+
+.testi > h3 {
+  color: #ff523b;
+}
+
+.testimonial {
+  text-align: center;
+  margin: 50px;
+  display: flex;
+  gap: 20px;
 }
